updated footer to prevent overlap in mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ container {
     justify-content: center;
     height: 100vh;
 }
-
+/*
 footer {
     position: absolute;
     flex-direction: column;
@@ -19,6 +19,15 @@ footer {
     bottom: -250px;
     left: 0px;
     right: 0px;
+}
+*/
+
+footer {
+    width: 100%;
+    flex-direction: column;
+    height: 210px;
+    background-color: red;
+
 }
 
 .carousel.slide {
